--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                                     <div className="relative image-container main-image-container">
                                         <div className="absolute inset-0 bg-gradient-to-r from-red-600 to-red-500 opacity-10 rounded-3xl main-image-rotate"></div>
                                         <div className="relative bg-white/80 backdrop-blur-xl rounded-3xl p-6 shadow-xl">
-                                            <div className="placeholder-image w-full rounded-xl" style={{ aspectRatio: "16/9" }}></div>
+                                            <img src="mainImage.png" alt="Main Illustration" className="w-full h-auto rounded-xl object-cover" style={{ aspectRatio: "16/9" }} />
                                         </div>
                                         
                                         {/* Floating Cards */}
