--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             const businessFeatures = [
                 {
                     title: "Access Local Demand",
-                    description: "Know exactly what your neighbors are looking for right now"
+                    description: "Know exactly what your Neighbours are looking for right now"
                 },
                 {
                     title: "Instant Inquiries",
@@ -282,7 +282,7 @@
                                             <>
                                                 Know What
                                                 <span className="block bg-gradient-to-r from-red-600 to-red-500 text-transparent bg-clip-text">
-                                                    Neighbors Need
+                                                   Neighbours Need
                                                 </span>
                                             </>
                                         ) : (
@@ -297,8 +297,8 @@
                                     
                                     <p className="text-lg sm:text-xl text-red-700/80 leading-relaxed">
                                         {showBusiness ? 
-                                            "Grow your business by instantly connecting with local customers actively searching for your products. Respond to inquiries and turn neighbors into customers." :
-                                            "Get what you need instantly by connecting with nearby stores. Just knoc, and find everything you're looking for right in your neighborhood."
+                                            "Grow your business by instantly connecting with local customers actively searching for your products. Respond to inquiries and turn neighbours into customers." :
+                                            "Get what you need instantly by connecting with nearby stores. Just knoc, and find everything you're looking for right in your neighbourhood."
                                         }
                                     </p>
 
