--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <!-- Babel -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
+    <!-- Import Privacy Policy Component -->
+    <script type="text/babel" src="PrivacyPolicy.js"></script>
+
     <style>
         body {
             font-family: 'Rubik', sans-serif;
