--- a/delete-account.html
+++ b/delete-account.html
@@ -47,24 +47,27 @@
                     </div>
 
                     <div class="space-y-4">
-                        <h2 class="font-semibold text-red-900 text-xl">Data That Will Be Deleted:</h2>
+                        <h2 class="font-semibold text-red-900 text-xl">Data That Will Be Permanently Deleted:</h2>
                         
                         <div class="bg-white p-6 rounded-xl border-2 border-red-100">
                             <h3 class="font-medium text-red-900 mb-3">For Users:</h3>
                             <ul class="list-disc list-inside space-y-2">
-                                <li>Personal identification information</li>
-                                <li>Contact details</li>
-                                <li>Profile data</li>
+                                <li>Name</li>
+                                <li>Contact number</li>
+                                <li>FCM token</li>
+                                <li>Profile pictures</li>
+                                <li>Device information</li>
                             </ul>
                         </div>
 
                         <div class="bg-white p-6 rounded-xl border-2 border-red-100">
                             <h3 class="font-medium text-red-900 mb-3">For Shops:</h3>
                             <ul class="list-disc list-inside space-y-2">
-                                <li>Shop owner's personal information</li>
-                                <li>Contact details</li>
-                                <li>Shop images and verification photos</li>
-                                <li>Shop-specific identifiers</li>
+                                <li>Contact number</li>
+                                <li>FCM token</li>
+                                <li>Shop verification photos</li>
+                                <li>Profile pictures</li>
+                                <li>Device information</li>
                             </ul>
                         </div>
                     </div>
@@ -74,26 +77,27 @@
                         
                         <div class="space-y-4">
                             <div>
-                                <h3 class="font-medium text-red-900 mb-2">For Users (Anonymized):</h3>
+                                <h3 class="font-medium text-red-900 mb-2">For Users:</h3>
                                 <ul class="list-disc list-inside space-y-2">
-                                    <li>Product inquiries (anonymized)</li>
-                                    <li>Category preferences</li>
-                                    <li>Location-based search patterns</li>
+                                    <li>Email address</li>
+                                    <li>Product inquiry history with location data</li>
+                                    <li>Search location history</li>
                                 </ul>
                             </div>
 
                             <div>
-                                <h3 class="font-medium text-red-900 mb-2">For Shops (Anonymized):</h3>
+                                <h3 class="font-medium text-red-900 mb-2">For Shops:</h3>
                                 <ul class="list-disc list-inside space-y-2">
-                                    <li>Shop category information</li>
-                                    <li>Shop location data (area/region level)</li>
-                                    <li>Anonymized inquiry statistics</li>
-                                    <li>Historical category-specific market trends</li>
+                                    <li>Email address</li>
+                                    <li>Shop name</li>
+                                    <li>Shop owner name</li>
+                                    <li>Shop category</li>
+                                    <li>Registration location</li>
                                 </ul>
                             </div>
 
                             <p class="text-sm italic">
-                                This data is retained for market analysis, improving user experience, and understanding geographical business trends.
+                                This data is retained for market analysis, improving local product discovery, and maintaining business category insights.
                             </p>
                         </div>
                     </div>
