--- a/delete-account.html
+++ b/delete-account.html
@@ -41,7 +41,7 @@
                             <li>Open the Knoc app</li>
                             <li>Open the drawer menu in the home screen</li>
                             <li>Navigate to Profile section</li>
-                            <li>Scroll down to find the "Delete Account" option</li>
+                            <li>Scroll down to find the "Delete Account/Delete Shop" option</li>
                             <li>Confirm your decision when prompted</li>
                         </ol>
                     </div>
@@ -54,7 +54,6 @@
                             <ul class="list-disc list-inside space-y-2">
                                 <li>Name</li>
                                 <li>Contact number</li>
-                                <li>FCM token</li>
                                 <li>Profile pictures</li>
                                 <li>Device information</li>
                             </ul>
@@ -64,9 +63,8 @@
                             <h3 class="font-medium text-red-900 mb-3">For Shops:</h3>
                             <ul class="list-disc list-inside space-y-2">
                                 <li>Contact number</li>
-                                <li>FCM token</li>
                                 <li>Shop verification photos</li>
-                                <li>Profile pictures</li>
+                                <li>Shop pictures</li>
                                 <li>Device information</li>
                             </ul>
                         </div>
@@ -89,8 +87,6 @@
                                 <h3 class="font-medium text-red-900 mb-2">For Shops:</h3>
                                 <ul class="list-disc list-inside space-y-2">
                                     <li>Email address</li>
-                                    <li>Shop name</li>
-                                    <li>Shop owner name</li>
                                     <li>Shop category</li>
                                     <li>Registration location</li>
                                 </ul>
