--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                                 <button 
                                     onClick={() => {
                                         if (showBusiness) {
-                                            window.location.href = 'https://forms.gle/YourShopRegistrationForm';
+                                            window.location.href = 'https://www.knoc.in/';
                                         } else {
                                             setShowDownloadGuide(true);
                                         }
