--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
             return (
                 <div className="aspect-w-16 aspect-h-9 w-full rounded-xl overflow-hidden shadow-lg">
                     <iframe 
-                        src="https://youtu.be/x13KftlfDwc?si=Qxtr7jueDNXV269I" 
+                        src="https://www.youtube.com/embed/x13KftlfDwc" 
                         title="YouTube video player" 
                         frameBorder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
