--- a/index.html
+++ b/index.html
@@ -383,125 +383,6 @@
             );
         };
 
-        // Download Guide Modal Component
-        const DownloadGuideModal = ({ onClose }) => {
-            const [currentStep, setCurrentStep] = useState(1);
-            
-            const steps = [
-                {
-                    title: "Join Beta Testing Group",
-                    description: "First, join our beta testing group on Google Groups to get access",
-                    action: "Join Group",
-                    actionLink: "https://groups.google.com/g/knocbeta"
-                },
-                {
-                    title: "Download from Play Store",
-                    description: "Once you've joined the group, you can download the app from Play Store",
-                    action: "Download App",
-                    actionLink: "https://play.google.com/store/apps/details?id=com.knoc.app"
-                }
-            ];
-
-            const currentStepData = steps[currentStep - 1];
-
-            return (
-                <div className="fixed inset-0 bg-black/50 backdrop-blur-sm z-50 flex items-center justify-center">
-                    <div className="max-w-md w-full mx-4">
-                        <div className="bg-white rounded-2xl shadow-xl">
-                            {/* Header */}
-                            <div className="p-6 border-b border-red-100">
-                                <div className="flex justify-between items-center">
-                                    <h2 className="text-2xl font-bold text-red-900">Download Knoc</h2>
-                                    <button 
-                                        onClick={onClose}
-                                        className="p-2 hover:bg-red-50 rounded-lg transition-colors"
-                                    >
-                                        <svg 
-                                            className="w-6 h-6 text-red-600" 
-                                            fill="none" 
-                                            stroke="currentColor" 
-                                            viewBox="0 0 24 24"
-                                        >
-                                            <path 
-                                                strokeLinecap="round" 
-                                                strokeLinejoin="round" 
-                                                strokeWidth={2} 
-                                                d="M6 18L18 6M6 6l12 12" 
-                                            />
-                                        </svg>
-                                    </button>
-                                </div>
-                            </div>
-
-                            {/* Progress Steps */}
-                            <div className="px-6 pt-6">
-                                <div className="flex items-center mb-8">
-                                    {steps.map((step, index) => (
-                                        <React.Fragment key={index}>
-                                            <div className="flex items-center">
-                                                <div className={`w-8 h-8 rounded-full flex items-center justify-center ${
-                                                    index + 1 <= currentStep ? 'bg-red-600 text-white' : 'bg-red-100 text-red-400'
-                                                }`}>
-                                                    {index + 1}
-                                                </div>
-                                                <span className="ml-2 text-sm font-medium text-red-900">
-                                                    Step {index + 1}
-                                                </span>
-                                            </div>
-                                            {index < steps.length - 1 && (
-                                                <div className={`flex-1 h-0.5 mx-4 ${
-                                                    index + 1 < currentStep ? 'bg-red-600' : 'bg-red-100'
-                                                }`} />
-                                            )}
-                                        </React.Fragment>
-                                    ))}
-                                </div>
-                            </div>
-
-                            {/* Content */}
-                            <div className="p-6 pt-0">
-                                <div className="mb-6">
-                                    <h3 className="text-xl font-semibold text-red-900 mb-2">
-                                        {currentStepData.title}
-                                    </h3>
-                                    <p className="text-red-600">
-                                        {currentStepData.description}
-                                    </p>
-                                </div>
-
-                                {/* Action Buttons */}
-                                <div className="flex gap-4">
-                                    <a
-                                        href={currentStepData.actionLink}
-                                        target="_blank"
-                                        rel="noopener noreferrer"
-                                        className="flex-1 bg-gradient-to-r from-red-600 to-red-500 text-white px-6 py-3 rounded-xl font-medium text-center shadow-lg hover:shadow-red-200/50 transition-all duration-300"
-                                    >
-                                        {currentStepData.action}
-                                    </a>
-                                    {currentStep < steps.length && (
-                                        <button
-                                            onClick={() => setCurrentStep(currentStep + 1)}
-                                            className="flex-1 border-2 border-red-200 text-red-600 px-6 py-3 rounded-xl font-medium hover:bg-red-50 transition-all duration-300"
-                                        >
-                                            Next Step
-                                        </button>
-                                    )}
-                                </div>
-                            </div>
-
-                            {/* Footer */}
-                            <div className="p-6 border-t border-red-100 bg-red-50/50">
-                                <p className="text-sm text-red-600 text-center">
-                                    Having trouble? Contact us at contact@knoc.in
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            );
-        };
-
         // Floating Card Component
         const FloatingCard = ({ position, icon, title, subtitle }) => (
             <div className={`floating-card ${position}`}>
@@ -539,7 +420,6 @@
         const DualLanding = () => {
             const [showBusiness, setShowBusiness] = useState(false);
             const [showPrivacyPolicy, setShowPrivacyPolicy] = useState(false);
-            const [showDownloadGuide, setShowDownloadGuide] = useState(false);
 
             const userFeatures = [
                 {
@@ -570,6 +450,10 @@
                     description: "Convert local searches into sales opportunities"
                 }
             ];
+            
+            const handleDownloadClick = () => {
+                window.open('https://play.google.com/store/apps/details?id=com.knoc.app', '_blank');
+            };
 
             return (
                 <div className="min-h-screen bg-gradient-to-br from-red-50 via-white to-red-50 overflow-x-hidden">
@@ -636,7 +520,7 @@
                                                 if (showBusiness) {
                                                     window.location.href = 'https://forms.gle/YourShopRegistrationForm';
                                                 } else {
-                                                    setShowDownloadGuide(true);
+                                                    handleDownloadClick();
                                                 }
                                             }}
                                             className="bg-gradient-to-r from-red-600 to-red-500 text-white px-8 py-4 rounded-xl font-medium shadow-lg hover:shadow-red-200/50 transition-all duration-300"
@@ -776,7 +660,7 @@
                                         if (showBusiness) {
                                             window.location.href = 'https://www.knoc.in/';
                                         } else {
-                                            setShowDownloadGuide(true);
+                                            handleDownloadClick();
                                         }
                                     }}
                                     className="bg-white text-red-600 px-8 py-4 rounded-xl font-medium shadow-lg transition-all duration-300 transform hover:scale-105 relative z-10"
