--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                                             </svg>
                                         </a>
                                         <a 
-                                            href="https://www.instagram.com/knoc_connect?igsh=dm5rZjloMjFjN2M4" 
+                                            href="https://www.instagram.com/knocfind?igsh=dm5rZjloMjFjN2M4" 
                                             target="_blank"
                                             rel="noopener noreferrer"
                                             className="w-9 h-9 bg-red-50 rounded-full flex items-center justify-center text-red-600 hover:bg-red-100 transition-colors duration-300"
