--- a/shopProfile.html
+++ b/shopProfile.html
@@ -405,7 +405,7 @@
         // TODO: Replace these with your actual Supabase credentials
         const SUPABASE_URL = 'https://rtwtkapynafirwixyeal.supabase.co'; // Replace with your actual URL
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJ0d3RrYXB5bmFmaXJ3aXh5ZWFsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzg2OTcwODYsImV4cCI6MjA1NDI3MzA4Nn0.UxKAcSfVuWLvbMU6nLQmF55BHngD8m1ZtKVGm9fnNas'; // Replace with your actual anon key
-        const DEEP_LINK_SECRET_KEY = 'CHANGE_THIS_IN_PRODUCTION_kJ8#mP2$vN5!qR7@wX9&zL4*tY6^hG3%'; // Same as your Dart code
+        const DEEP_LINK_SECRET_KEY = 'ajdr%733ugq@qys237cgyu1*gy$yya625vq6ef$'; // Same as your Dart code
         // ================================
 
         // Initialize Supabase client
