--- a/shopProfile.html
+++ b/shopProfile.html
@@ -427,7 +427,8 @@
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJ0d3RrYXB5bmFmaXJ3aXh5ZWFsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzg2OTcwODYsImV4cCI6MjA1NDI3MzA4Nn0.UxKAcSfVuWLvbMU6nLQmF55BHngD8m1ZtKVGm9fnNas'; // Replace with your actual anon key
         
         // IMPORTANT: This must match exactly with your Dart code's secret key
-        const DEEP_LINK_SECRET_KEY = 'ajdr%733ugq@qys237cgyu1*gy$yya625vq6ef$';
+        // This is the fallback key from your DeepLinkService
+        const DEEP_LINK_SECRET_KEY = 'CHANGE_THIS_IN_PRODUCTION_kJ8#mP2$vN5!qR7@wX9&zL4*tY6^hG3%';
         
         // Debug mode
         let DEBUG_MODE = true; // Set to false in production
