--- a/shopProfile.html
+++ b/shopProfile.html
@@ -228,7 +228,7 @@
             }
 
             try {
-                // Replace with your actual Supabase edge function URL
+                // Your actual Supabase edge function URL
                 const response = await fetch(`https://rtwtkapynafirwixyeal.supabase.co/functions/v1/web-shopView/${shopId}`);
                 
                 if (!response.ok) {
