--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
                     {showSuggestions && (
                         <div 
                             ref={suggestionsRef}
-                            className="absolute z-50 w-full mt-4 glass-effect rounded-3xl shadow-modern max-h-96 overflow-y-auto border border-gray-100"
+                            className="absolute z-[60] w-full mt-4 glass-effect rounded-3xl shadow-modern max-h-96 overflow-y-auto border border-gray-100"
+                            style={{ zIndex: 60 }}
                         >
                             {suggestions.length > 0 ? (
                                 <div className="py-3">
@@ -612,21 +613,18 @@
             return (
                 <div className="min-h-screen bg-gray-50">
                     {/* Navbar */}
-                    <nav className="fixed w-full z-40 glass-effect border-b border-gray-200/50">
+                    <nav className="fixed w-full z-50 glass-effect border-b border-gray-200/50">
                         <div className="max-w-7xl mx-auto px-4 lg:px-8">
                             <div className="flex items-center justify-between py-4">
                                 <div className="flex items-center space-x-3">
-                                    <div className="w-12 h-12 rounded-2xl bg-gradient-to-br from-red-500 to-red-600 flex items-center justify-center shadow-card">
-                                        <img 
-                                            src="knoc_logo.png"
-                                            alt="Knoc Logo"
-                                            className="w-8 h-8 object-cover"
-                                            onError={(e) => {
-                                                e.target.style.display = 'none';
-                                                e.target.parentNode.innerHTML = '<span class="text-white font-bold text-lg">K</span>';
-                                            }}
-                                        />
-                                    </div>
+                                    <img 
+                                        src="knoc_logo.png"
+                                        alt="Knoc Logo"
+                                        className="w-12 h-12 object-contain"
+                                        onError={(e) => {
+                                            e.target.outerHTML = '<div class="w-12 h-12 rounded-2xl bg-gradient-to-br from-red-500 to-red-600 flex items-center justify-center shadow-card"><span class="text-white font-bold text-lg">K</span></div>';
+                                        }}
+                                    />
                                     <span className="text-2xl font-bold text-gray-900">Knoc</span>
                                 </div>
                                 <button 
@@ -812,17 +810,14 @@
                                 {/* Logo and About */}
                                 <div className="lg:col-span-2">
                                     <div className="flex items-center space-x-3 mb-6">
-                                        <div className="w-12 h-12 rounded-2xl bg-gradient-to-br from-red-500 to-red-600 flex items-center justify-center shadow-card">
-                                            <img 
-                                                src="knoc_logo.png"
-                                                alt="Knoc Logo"
-                                                className="w-8 h-8 object-cover"
-                                                onError={(e) => {
-                                                    e.target.style.display = 'none';
-                                                    e.target.parentNode.innerHTML = '<span class="text-white font-bold text-lg">K</span>';
-                                                }}
-                                            />
-                                        </div>
+                                        <img 
+                                            src="knoc_logo.png"
+                                            alt="Knoc Logo"
+                                            className="w-12 h-12 object-contain"
+                                            onError={(e) => {
+                                                e.target.outerHTML = '<div class="w-12 h-12 rounded-2xl bg-gradient-to-br from-red-500 to-red-600 flex items-center justify-center shadow-card"><span class="text-white font-bold text-lg">K</span></div>';
+                                            }}
+                                        />
                                         <span className="text-2xl font-bold text-gray-900">Knoc</span>
                                     </div>
                                     <p className="text-gray-600 mb-6 max-w-md">
