--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                     
                     <div style="text-align: center; margin-top: 24px;">
                         <p style="font-size: 14px; color: rgba(255, 255, 255, 0.5);">
-                            💡 Try: "Food Delight", "Aman Mens Wear", "Annapurna", "saree", "pharmacy"
+                            💡 Try: "Cafe", "Restaurants", "Name of any local shop"
                         </p>
                     </div>
                 </div>
