--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
                                 type="text" 
                                 class="search-input" 
                                 id="searchInput"
-                                placeholder="Search shops like 'Food Delight', 'Aman Mens Wear', 'Annapurna'..."
+                                placeholder="Type name of any shop...."
                                 oninput="handleSearch(this.value)"
                                 onkeydown="handleKeyDown(event)"
                                 onfocus="handleFocus()"
