--- a/shopProfile.html
+++ b/shopProfile.html
@@ -443,13 +443,10 @@
                 </div>
                 <div class="text-sm">
                     <p class="text-blue-800 font-medium mb-1">
-                        📸 <strong>Image Disclaimer / छवि अस्वीकरण</strong>
+                        📸 <strong>Image Disclaimer</strong>
                     </p>
                     <p class="text-blue-700 mb-2">
                         <strong>English:</strong> The product images shown may be AI-generated for visual representation. Actual dishes may look different from the images displayed.
-                    </p>
-                    <p class="text-blue-700">
-                        <strong>हिंदी:</strong> दिखाए गए उत्पाद चित्र दृश्य प्रतिनिधित्व के लिए AI द्वारा बनाए गए हो सकते हैं। वास्तविक व्यंजन दिखाए गए चित्रों से अलग दिख सकते हैं।
                     </p>
                 </div>
             </div>
